# ufsc.compiladores.analisador-lexico

./: Makefile  README.md  fizzbuzz.ccc  primes.ccc  pyproject.toml  sort.ccc  stable_quicksort.ccc
alex/: __init__.py  __main__.py
